--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,6 +81,14 @@ flutter:
     - family: Kaushan
       fonts:
       - asset: fonts/KaushanScript-Regular.ttf
+
+    - family: Pacifico
+      fonts:
+        - asset: fonts/Pacifico-Regular.ttf
+
+    - family: SourceSansPro
+      fonts:
+        - asset: fonts/SourceSansPro-Regular.ttf
   # fonts:
   #   - family: Schyler
   #     fonts:
